# SpikerNet

./: .gitignore  CLNC.docx  README.md  install_conda.sh  pyproject.toml  requirements.txt  setup.py  temp.ipynb
BGTC_SpikerNet/: SpikerNet_Main.py  requirements.txt  run_CBG_Model_Frequency_Modulation_Controller.py  setup.py
BGTC_SpikerNet/gym_spiker/: __init__.py
BGTC_SpikerNet/gym_spiker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
SpikerNet/: OstimTestPulse_Reinforce_RX7.rcx  OstimTestPulse_Reinforce_RX7_Delay.rcx  OstimTestPulse_Reinforce_RZ2.rcx  SpikerNet_Main.py  example.txt  nlsd_mex.mexw64  samplePSTH.csv  samplePSTH.data  samplePSTH.mat  setup.py  testGenrl.py  testMatEngine.py  testTDTPy.py  trialPSTH.pickle
SpikerNet/gym_spiker/: __init__.py  barsP.m  defaultParams.m
SpikerNet/gym_spiker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
SpikerNet/logs/: events.out.tfevents.1607539614.X-bmed2062pc1.23248.0  events.out.tfevents.1607539710.X-bmed2062pc1.21920.0  events.out.tfevents.1607540798.X-bmed2062pc1.21880.0  events.out.tfevents.1607540866.X-bmed2062pc1.22796.0  events.out.tfevents.1607541046.X-bmed2062pc1.23176.0  events.out.tfevents.1607541159.X-bmed2062pc1.12204.0  events.out.tfevents.1607624558.X-bmed2062pc1.13244.0  events.out.tfevents.1607625513.X-bmed2062pc1.23524.0  events.out.tfevents.1607625737.X-bmed2062pc1.23020.0  (+89 more)
gym_spiker/: __init__.py
train_scripts/: BGEnv_plotter.py  SpikerNet_plotter.py  run_CBG_Model_Amplitude_Modulation_Controller.py  temp.ipynb  train_td3.py
unused_code/: SpikerNet_Main.py
(+22 files in other folders)
