[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "gym-spiker"
version         = "0.1.0"
description     = "OpenAI-Gym environment for the BGTC circuit from SpikerNet"
readme          = "README.md"
requires-python = ">=3.10"
license         = {text = "CC BY-NC 4.0"}
authors         = [{name = "Brandon S Coventry", email = "bscoventry@gmail.com"}]
maintainers     = [{name = "Markson Chen",       email = "markson@example.com"}]
dependencies = [
    "gymnasium==0.29.1",
    "numpy>=1.23",
    "scipy>=1.10",
    "matplotlib>=3.8",
    "docopt>=0.6.2",
    "tabulate>=0.9.0",
    "scikit-learn>=1.7.0",
    "pyNN==0.12.3",
    "neuron>=8.2.4",
]

[project.optional-dependencies]
train = [
    "stable-baselines3>=2.3",
    # To be updated
]

[project.urls]
Homepage = "https://github.com/MarksonChen/SpikerNet"
Docs     = "https://github.com/MarksonChen/SpikerNet#readme"

[tool.setuptools]
package-dir = {"" = "."}                # repo root is import root

[tool.setuptools.packages.find]
include = ["gym_spiker*"]
namespaces = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.package-data]
"gym_spiker.envs" = ["*.pickle"]
